# iUserApps

./: .gitmodules  CMakeLists.txt
background-switcher/: CMakeLists.txt
background-switcher/src/: main.cpp
cube/: CMakeLists.txt
cube/src/: main.cpp
desktop-shell/: CMakeLists.txt
desktop-shell/src/: main.cpp
dns-smoke/src/: main.c
file-browser/: CMakeLists.txt
file-browser/src/: main.cpp
font-manager/: CMakeLists.txt
font-manager/src/: main.cpp
graphics-compositor/: CMakeLists.txt
graphics-compositor/src/: assets.cpp  background.cpp  buffers.cpp  common.hpp  font.cpp  font_types.hpp  input.cpp  main.cpp  platform.cpp  presentation.cpp  protocol.cpp  render_primitives.cpp  scene.cpp  shapes.cpp  state.cpp  surface.cpp
hello/: CMakeLists.txt
hello/src/: main.cpp
http-smoke/src/: main.c
input-manager/: CMakeLists.txt
input-manager/src/: main.cpp
ld-instantos/: CMakeLists.txt
ld-instantos/src/: main.cpp
login/: CMakeLists.txt
login/src/: main.cpp
mlibc-hello/src/: main.c  start.S
mlibc-socket-smoke/src/: main.c
net-smoke/: CMakeLists.txt
net-smoke/src/: main.cpp
network-manager/: CMakeLists.txt
network-manager/src/: main.cpp
outside/: .gitignore
outside/mlibc-sysdeps/instantos/: builtins.c  crt1.S  entry.cpp  meson.build  syscall.cpp  sysdeps.cpp
outside/mlibc-sysdeps/instantos/include/: mntent.h
outside/mlibc-sysdeps/instantos/include/bits/: syscall.h
posix-smoke/: CMakeLists.txt
posix-smoke/src/: main.cpp
process-manager/: CMakeLists.txt
process-manager/src/: main.cpp
service-common/include/: service_daemon.hpp
session-manager/: CMakeLists.txt
session-manager/src/: main.cpp
storage-manager/: CMakeLists.txt
storage-manager/src/: main.cpp
terminal/: CMakeLists.txt
terminal/src/: main.cpp
